add notice delete comment
